--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
-    <title>Super Jelly Burger Shop</title>
+    <title>Burger Shop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
